Fix obscure exception with invalid users