@@ -1,14 +1,14 @@
 package me.caseload.knockbacksync.player;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class JitterCalculator {
-    private final int SAMPLE_SIZE = 15;
+
     private final Queue<Long> pings = new LinkedList<>();
 
     public void addPing(long pingTime) {
         pings.offer(pingTime);
+        int SAMPLE_SIZE = 15;
         if (pings.size() > SAMPLE_SIZE) {
             pings.poll();
         }
@@ -32,7 +32,7 @@ public class JitterCalculator {
         double upperBound = q3 + 1.5 * iqr;
         List<Long> filteredPings = sortedPings.stream()
                 .filter(p -> p >= lowerBound && p <= upperBound)
-                .collect(Collectors.toList());
+                .toList();
 
         // Calculate standard deviation
         double mean = filteredPings.stream().mapToLong(Long::longValue).average().orElse(0);
